[gd_scene load_steps=5 format=2]

[ext_resource path="res://base/script/dialog_ui.gd" type="Script" id=1]
[ext_resource path="res://misc/dialogbox.png" type="Texture" id=2]
[ext_resource path="res://base/sprite/asriel/speak/default.png" type="Texture" id=3]
[ext_resource path="res://base/theme/speak.tres" type="Theme" id=4]

[node name="DialogUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="SFX" type="AudioStreamPlayer" parent="."]
bus = "Speak"

[node name="BoxControl" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -289.0
margin_top = -184.0
margin_right = 289.0

[node name="Background" type="Sprite" parent="BoxControl"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false

[node name="Container" type="Control" parent="BoxControl"]
margin_right = 578.0
margin_bottom = 184.0

[node name="Contents" type="Control" parent="BoxControl/Container"]
margin_left = 6.0
margin_top = 6.0
margin_right = 572.0
margin_bottom = 146.0

[node name="NextControl" type="MarginContainer" parent="BoxControl/Container/Contents"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0

[node name="FaceControl" type="Control" parent="BoxControl/Container/Contents"]
margin_right = 140.0
margin_bottom = 140.0

[node name="Face" type="TextureRect" parent="BoxControl/Container/Contents/FaceControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = -54.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="TypeControl" type="MarginContainer" parent="BoxControl/Container/Contents/FaceControl"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 14.0
margin_bottom = -16.0

[node name="Container" type="Control" parent="BoxControl/Container/Contents/FaceControl/TypeControl"]
margin_right = 2.0
margin_bottom = 110.0

[node name="StarControl" type="Control" parent="BoxControl/Container/Contents/FaceControl/TypeControl/Container"]
margin_right = 32.0
margin_bottom = 32.0

[node name="Star" type="RichTextLabel" parent="BoxControl/Container/Contents/FaceControl/TypeControl/Container/StarControl"]
margin_right = 32.0
margin_bottom = 32.0
theme = ExtResource( 4 )
text = "*"
scroll_active = false

[node name="TextControl" type="Control" parent="BoxControl/Container/Contents/FaceControl/TypeControl/Container/StarControl"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 354.0
margin_bottom = 78.0

[node name="Text" type="RichTextLabel" parent="BoxControl/Container/Contents/FaceControl/TypeControl/Container/StarControl/TextControl"]
margin_right = 354.0
margin_bottom = 110.0
theme = ExtResource( 4 )
text = "..."
scroll_active = false
